<resources>
    <string name="app_name">PokeApp</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="alert">Alert</string>
    <string name="title_activity_drawer">DrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="accept">accept</string>
    <string name="enter_your_name">enter your name</string>
    <string name="enter_your_last_name">enter your last name</string>
    <string name="enter_your_email">enter your email</string>
    <string name="enter_your_favorite_pokemon">enter your favorite pokemon</string>
    <string name="save_changes">save changes</string>
    <string name="enter_your_profile_details">Enter your profile details</string>
    <string name="profile">profile</string>
    <string name="list">list</string>
</resources>